--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -68,7 +68,7 @@
 
     <div class="row doc-froala-div">
       <div [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-4 froala-design' : 'col-sm-12 col-md-4 p-b-0'">
-        <app-po-documents #poDocument [documentData]="documentList"></app-po-documents>
+        <app-po-documents #poDocument [documentData]="documentList" *ngIf="documentList || documentList === null"></app-po-documents>
       </div>
       <div [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-8 hidePoweredBy froala-design' : 'col-sm-12 col-md-8 hidePoweredBy p-b-0'" *ngIf="mode === 'edit'">
         <form [formGroup]="poTerms">
