--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -5,11 +5,14 @@
         PO is Approved by {{ this.poData.poStatusChangedBy }} on {{ this.poData.poStatusChangedOn | date: "dd-MMM-yyy" }}
 
         <div *ngIf="this.mode === 'view'" class="float-right">
-          <span class="text-semi-bold color-main cursor-pointer"
+          <span class="text-semi-bold color-main cursor-pointer p-r-15"
             ><a (click)="downloadPo()" class="font-size16" matTooltip="Download PO">
               <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15" *ngIf="!showResponsiveDesign">Download P.O</span></a
             ></span
           >
+          <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="openShortClose()">
+            Short Close
+          </button>
         </div>
       </div>
 
