--- a/src/app/shared/components/advance-search/advance-search.component.html
+++ b/src/app/shared/components/advance-search/advance-search.component.html
@@ -5,6 +5,7 @@
         <span class="brand-color" (click)="clearFilter()">Clear</span>
     </div>
 
+    <!-- project names -->
     <div class="border-bottom">
         <mat-expansion-panel>
             <mat-expansion-panel-header>
@@ -49,6 +50,7 @@
         </mat-expansion-panel>
     </div>
 
+    <!-- supplier name -->
     <div class="border-bottom">
         <mat-expansion-panel>
             <mat-expansion-panel-header>
@@ -95,6 +97,7 @@
         </mat-expansion-panel>
     </div>
 
+    <!-- material name -->
     <div class="border-bottom">
         <mat-expansion-panel>
             <mat-expansion-panel-header>
@@ -141,70 +144,219 @@
         </mat-expansion-panel>
     </div>
 
-    <div class="border-bottom">
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    RFQ Status
-                </mat-panel-title>
-            </mat-expansion-panel-header>
+    <!-- rfq status for rfq -->
+    <ng-container *ngIf="filterType === 'rfq'">
+        <div class="border-bottom">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        RFQ Status
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
 
-            <section class="example-section pb-2">
-                <mat-checkbox class="example-margin d-block"
-                    (change)="checkSubmitNotSubmit($event.checked, '0', bidSubmitted, notSubmitted)" #bidSubmitted>Bid
-                    Submitted</mat-checkbox>
-                <mat-checkbox class="example-margin d-block"
-                    (change)="checkSubmitNotSubmit($event.checked, '1', bidSubmitted, notSubmitted)" #notSubmitted>Not
-                    Submitted</mat-checkbox>
-            </section>
+                <section class="example-section pb-2">
+                    <mat-checkbox class="example-margin d-block"
+                        (change)="checkSubmitNotSubmit(bidSubmitted, notSubmitted)" #bidSubmitted>
+                        Bid
+                        Submitted</mat-checkbox>
+                    <mat-checkbox class="example-margin d-block"
+                        (change)="checkSubmitNotSubmit(bidSubmitted, notSubmitted)" #notSubmitted>
+                        Not
+                        Submitted</mat-checkbox>
+                </section>
 
-        </mat-expansion-panel>
-    </div>
+            </mat-expansion-panel>
+        </div>
+    </ng-container>
 
-    <div class="border-bottom">
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Raised By
-                </mat-panel-title>
-            </mat-expansion-panel-header>
+    <!-- raised by for rfq -->
+    <ng-container *ngIf="filterType === 'rfq'">
+        <div class="border-bottom">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Raised By
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
 
 
-            <mat-form-field class="d-block border-bottom-dark">
-                <mat-label>Select Users</mat-label>
-                <mat-select multiple (openedChange)="usersInput.focus()" #usersSelect>
-                    <div class="d-flex">
-                        <input class="pl-3" #usersInput matInput focused="'true'" type="text"
-                            (input)="search($event.target.value, 'users')" autocomplete="off" placeholder="search">
-                        <button mat-button matSuffix mat-icon-button>
-                            <mat-icon>search</mat-icon>
-                        </button>
-                    </div>
-                    <mat-divider></mat-divider>
-                    <mat-option *ngFor="let project of usersList" [value]="project"
-                        (click)="searchValue(project, 'users')">
-                        {{project.ProjectUser.firstName}} {{project.ProjectUser.lastName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+                <mat-form-field class="d-block border-bottom-dark">
+                    <mat-label>Select Users</mat-label>
+                    <mat-select multiple (openedChange)="usersInput.focus()" #usersSelect>
+                        <div class="d-flex">
+                            <input class="pl-3" #usersInput matInput focused="'true'" type="text"
+                                (input)="search($event.target.value, 'users')" autocomplete="off" placeholder="search">
+                            <button mat-button matSuffix mat-icon-button>
+                                <mat-icon>search</mat-icon>
+                            </button>
+                        </div>
+                        <mat-divider></mat-divider>
+                        <mat-option *ngFor="let project of usersList" [value]="project"
+                            (click)="searchValue(project, 'users')">
+                            {{project.ProjectUser.firstName}} {{project.ProjectUser.lastName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
 
-            <ng-container *ngIf="usersSelect.selected">
-                <ul class="selected-list">
-                    <li *ngFor="let option of usersSelect.selected" class="d-flex justify-content-between">
-                        {{getValueWithMaxWidth({fval: option.value.ProjectUser.firstName, sval: option.value.ProjectUser.lastName})}}
-                        <span class="font-size20">
-                            <mat-icon
-                                (click)="removeId(option.value.ProjectUser.userId, 'users'); searchValue(option.value, 'users')"
-                                inline="true">close
-                            </mat-icon>
-                        </span>
-                    </li>
-                </ul>
+                <ng-container *ngIf="usersSelect.selected">
+                    <ul class="selected-list">
+                        <li *ngFor="let option of usersSelect.selected" class="d-flex justify-content-between">
+                            {{getValueWithMaxWidth({fval: option.value.ProjectUser.firstName, sval: option.value.ProjectUser.lastName})}}
+                            <span class="font-size20">
+                                <mat-icon
+                                    (click)="removeId(option.value.ProjectUser.userId, 'users'); searchValue(option.value, 'users')"
+                                    inline="true">close
+                                </mat-icon>
+                            </span>
+                        </li>
+                    </ul>
 
-            </ng-container>
+                </ng-container>
 
-        </mat-expansion-panel>
-    </div>
+            </mat-expansion-panel>
+        </div>
+    </ng-container>
+
+    <!-- approved by for po -->
+    <ng-container *ngIf="filterType === 'po'">
+        <div class="border-bottom">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Approved By
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+
+                <mat-form-field class="d-block border-bottom-dark">
+                    <mat-label>Select Users</mat-label>
+                    <mat-select multiple (openedChange)="approversInput.focus()" #approversSelect>
+                        <div class="d-flex">
+                            <input class="pl-3" #approversInput matInput focused="'true'" type="text"
+                                (input)="search($event.target.value, 'approvers')" autocomplete="off"
+                                placeholder="search">
+                            <button mat-button matSuffix mat-icon-button>
+                                <mat-icon>search</mat-icon>
+                            </button>
+                        </div>
+                        <mat-divider></mat-divider>
+                        <mat-option *ngFor="let project of approversList" [value]="project"
+                            (click)="searchValue(project, 'approvers')">
+                            {{project.ProjectUser.firstName}} {{project.ProjectUser.lastName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+
+                <ng-container *ngIf="approversSelect.selected">
+                    <ul class="selected-list">
+                        <li *ngFor="let option of approversSelect.selected" class="d-flex justify-content-between">
+                            {{getValueWithMaxWidth({fval: option.value.ProjectUser.firstName, sval: option.value.ProjectUser.lastName})}}
+                            <span class="font-size20">
+                                <mat-icon
+                                    (click)="removeId(option.value.ProjectUser.userId, 'approvers'); searchValue(option.value, 'approvers')"
+                                    inline="true">close
+                                </mat-icon>
+                            </span>
+                        </li>
+                    </ul>
+
+                </ng-container>
+
+            </mat-expansion-panel>
+        </div>
+    </ng-container>
+
+
+    <!-- created by for po -->
+    <ng-container *ngIf="filterType === 'po'">
+        <div class="border-bottom">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Created By
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+
+                <mat-form-field class="d-block border-bottom-dark">
+                    <mat-label>Select Users</mat-label>
+                    <mat-select multiple (openedChange)="createdInput.focus()" #createdSelect>
+                        <div class="d-flex">
+                            <input class="pl-3" #createdInput matInput focused="'true'" type="text"
+                                (input)="search($event.target.value, 'created')" autocomplete="off"
+                                placeholder="search">
+                            <button mat-button matSuffix mat-icon-button>
+                                <mat-icon>search</mat-icon>
+                            </button>
+                        </div>
+                        <mat-divider></mat-divider>
+                        <mat-option *ngFor="let project of createdList" [value]="project"
+                            (click)="searchValue(project, 'created')">
+                            {{project.ProjectUser.firstName}} {{project.ProjectUser.lastName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+
+                <ng-container *ngIf="createdSelect.selected">
+                    <ul class="selected-list">
+                        <li *ngFor="let option of createdSelect.selected" class="d-flex justify-content-between">
+                            {{getValueWithMaxWidth({fval: option.value.ProjectUser.firstName, sval: option.value.ProjectUser.lastName})}}
+                            <span class="font-size20">
+                                <mat-icon
+                                    (click)="removeId(option.value.ProjectUser.userId, 'created'); searchValue(option.value, 'created')"
+                                    inline="true">close
+                                </mat-icon>
+                            </span>
+                        </li>
+                    </ul>
+
+                </ng-container>
+
+            </mat-expansion-panel>
+        </div>
+    </ng-container>
+
+
+    <!-- payment status for po -->
+    <!-- <ng-container *ngIf="filterType === 'po'">
+        <div class="border-bottom">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Payment Status
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+            </mat-expansion-panel>
+        </div>
+    </ng-container> -->
+
+
+    <!-- po amount for po -->
+    <ng-container *ngIf="filterType === 'po'">
+        <div class="border-bottom">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        PO Amount
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+                <mat-form-field class="w-100 border-input">
+                    <mat-label>Min Amount</mat-label>
+                    <input matInput type="number" #minAmt>
+                </mat-form-field>
+
+                <mat-form-field class="w-100 border-input">
+                    <mat-label>Max Amount</mat-label>
+                    <input matInput type="number" #maxAmt>
+                </mat-form-field>
+
+            </mat-expansion-panel>
+        </div>
+    </ng-container>
+
+
 
     <div class="border-bottom">
         <mat-expansion-panel>
@@ -231,31 +383,58 @@
         </mat-expansion-panel>
     </div>
 
-    <div class="border-bottom">
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Expiry Date
-                </mat-panel-title>
-            </mat-expansion-panel-header>
+    <ng-container *ngIf="filterType === 'rfq'">
+        <div class="border-bottom">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        Expiry Date
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
 
-            <mat-form-field appearance="fill" class="w-100">
-                <mat-label>From</mat-label>
-                <input matInput [matDatepicker]="expiryFromPicker" (dateChange)="getDate($event, 'expiryFromPicker')">
-                <mat-datepicker-toggle matSuffix [for]="expiryFromPicker"></mat-datepicker-toggle>
-                <mat-datepicker #expiryFromPicker></mat-datepicker>
-            </mat-form-field>
+                <mat-form-field appearance="fill" class="w-100">
+                    <mat-label>From</mat-label>
+                    <input matInput [matDatepicker]="expiryFromPicker"
+                        (dateChange)="getDate($event, 'expiryFromPicker')">
+                    <mat-datepicker-toggle matSuffix [for]="expiryFromPicker"></mat-datepicker-toggle>
+                    <mat-datepicker #expiryFromPicker></mat-datepicker>
+                </mat-form-field>
 
-            <mat-form-field appearance="fill" class="w-100">
-                <mat-label>To</mat-label>
-                <input matInput [matDatepicker]="expiryToPicker" (dateChange)="getDate($event, 'expiryToPicker')">
-                <mat-datepicker-toggle matSuffix [for]="expiryToPicker"></mat-datepicker-toggle>
-                <mat-datepicker #expiryToPicker></mat-datepicker>
-            </mat-form-field>
+                <mat-form-field appearance="fill" class="w-100">
+                    <mat-label>To</mat-label>
+                    <input matInput [matDatepicker]="expiryToPicker" (dateChange)="getDate($event, 'expiryToPicker')">
+                    <mat-datepicker-toggle matSuffix [for]="expiryToPicker"></mat-datepicker-toggle>
+                    <mat-datepicker #expiryToPicker></mat-datepicker>
+                </mat-form-field>
 
 
-        </mat-expansion-panel>
-    </div>
+            </mat-expansion-panel>
+        </div>
+    </ng-container>
+
+
+    <!-- po status for rfq -->
+    <ng-container *ngIf="filterType === 'po'">
+        <div class="border-bottom">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        PO Status
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+                <section class="example-section pb-2">
+                    <mat-checkbox class="example-margin d-block" #po1>
+                        Sent for Approval</mat-checkbox>
+                    <mat-checkbox class="example-margin d-block" #po2>
+                        Approved</mat-checkbox>
+                    <mat-checkbox class="example-margin d-block" #po3>
+                        Drafted</mat-checkbox>
+                </section>
+
+            </mat-expansion-panel>
+        </div>
+    </ng-container>
 
     <div class="actions text-align-center p-10 justify-content-between">
         <button mat-button class="bordered-button mr-2" (click)="getFilterExportRequest()">
