--- a/src/assets/scss/pages/advance-search.scss
+++ b/src/assets/scss/pages/advance-search.scss
@@ -23,6 +23,7 @@
     
     .mat-expansion-panel-header{
         padding: 0 10px;
+        height: 40px !important;
     }
 
     .mat-expansion-panel-body{
