--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -42,7 +42,9 @@
                   <span class="top-header-area">
                     <span class="project-name mr-5">{{ project.projectName }}</span>
                     <span class="main-color"
-                      >{{ project.addressLine1 }} {{ project.addressLine2 }} {{ project.city }} {{ project.pinCode }} {{ project.state }} {{ project.country }}
+                      >{{ project.addressLine1 }}
+                      <span *ngIf="project.addressLine2">,{{ project.addressLine2 }}</span>
+                      ,{{ project.city }},{{ project.country }},{{ project.state }},{{ project.pinCode }}
                     </span>
                   </span>
                 </mat-expansion-panel-header>
@@ -173,21 +175,21 @@
 
                         <!-- Attached Image Column individual Supplier -->
                         <div class="mat-cell maxwidth-10 view-bid-images-preview text-center">
-
                           <ng-container *ngIf="supplier?.documentList?.length; else defaultImage">
-                            <div class="images-lists" [ngClass]="supplier.documentList.length === 1 ? 'single-image' : (supplier.documentList.length === 2 ? 'double-images' : 'triple-images')"
-                            (click)="viewAllImages(material.materialId, supplier.supplierId, project.projectId)">
+                            <div
+                              class="images-lists"
+                              [ngClass]="supplier.documentList.length === 1 ? 'single-image' : supplier.documentList.length === 2 ? 'double-images' : 'triple-images'"
+                              (click)="viewAllImages(material.materialId, supplier.supplierId, project.projectId)"
+                            >
                               <ng-container *ngFor="let img of supplier.documentList; let i = index">
-                                <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
+                                <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
                               </ng-container>
                             </div>
                           </ng-container>
-                          
+
                           <ng-template #defaultImage>
                             <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
-                          </ng-template> 
-                          
-
+                          </ng-template>
 
                           <!-- <div *ngIf="supplier?.documentList?.length" class="images-lists" [ngClass]="supplier.documentList.length === 1 ? 'single-image' : (supplier.documentList.length === 2 ? 'double-images' : 'triple-images')"
                             (click)="viewAllImages(material.materialId, supplier.supplierId, project.projectId)">
