--- a/src/app/shared/dialogs/select-project/select-project.component.html
+++ b/src/app/shared/dialogs/select-project/select-project.component.html
@@ -15,7 +15,11 @@
               <p class="mb-0 select-project__location d-flex align-items-center">
                 <!-- <i class="material-icons mr-2">location_on</i> -->
                 <img src="assets/images/location-icon.png" class="img-fluid mr-2" alt="Location Icon" />
-                <span>{{ project.addressLine1 }}, {{ project.addressLine2 }}</span>
+                <span
+                  >{{ project.addressLine1 }}
+                  <span *ngIf="project.addressLine2">,{{ project.addressLine2 }}</span>
+                  ,{{ project.city }},{{ project.country }},{{ project.state }},{{ project.pinCode }}
+                </span>
               </p>
             </div>
           </mat-radio-button>
