--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -50,186 +50,196 @@
       </ng-container>
 
       <div class="col-md-10">
-        <div class="rfq-list-detail-custom">
-          <mat-accordion *ngIf="submittedRfqListTemp" class="m-b-10">
-            <mat-expansion-panel class="myPanel" [expanded]="true">
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Quotes Received
-                </mat-panel-title>
-              </mat-expansion-panel-header>
+        <ng-container *ngIf="(submittedRfqListTemp || nonSubmittedRfqListTemp) else emptyReports">
+          <div class="rfq-list-detail-custom">
+            <mat-accordion *ngIf="submittedRfqListTemp" class="m-b-10">
+              <mat-expansion-panel class="myPanel" [expanded]="true">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Quotes Received
+                  </mat-panel-title>
+                </mat-expansion-panel-header>
 
-              <div class="add-unique-container mat-elevation-z8">
-                <table mat-table [dataSource]="submittedRfqList">
-                  <ng-container matColumnDef="RFQ Name">
-                    <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
-                    <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
-                  </ng-container>
+                <div class="add-unique-container mat-elevation-z8">
+                  <table mat-table [dataSource]="submittedRfqList">
+                    <ng-container matColumnDef="RFQ Name">
+                      <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
+                      <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="Raised Date">
-                    <th mat-header-cell *matHeaderCellDef>Raised Date</th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.createdAt | date: "dd MMM yyy" }}
-                    </td>
-                  </ng-container>
+                    <ng-container matColumnDef="Raised Date">
+                      <th mat-header-cell *matHeaderCellDef>Raised Date</th>
+                      <td mat-cell *matCellDef="let element">
+                        {{ element.createdAt | date: "dd MMM yyy" }}
+                      </td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="End Date">
-                    <th mat-header-cell *matHeaderCellDef>End Date</th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.rfqDueDate | date: "dd MMM yyy" }}
-                    </td>
-                  </ng-container>
+                    <ng-container matColumnDef="End Date">
+                      <th mat-header-cell *matHeaderCellDef>End Date</th>
+                      <td mat-cell *matCellDef="let element">
+                        {{ element.rfqDueDate | date: "dd MMM yyy" }}
+                      </td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="Projects">
-                    <th mat-header-cell *matHeaderCellDef class="text-align-center">Projects</th>
-                    <td mat-cell *matCellDef="let element" class="text-align-center">
-                      {{ element.projectCount }}
-                    </td>
-                  </ng-container>
+                    <ng-container matColumnDef="Projects">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-center">Projects</th>
+                      <td mat-cell *matCellDef="let element" class="text-align-center">
+                        {{ element.projectCount }}
+                      </td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="Total Material">
-                    <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Material</th>
-                    <td mat-cell *matCellDef="let element" class="text-align-center">
-                      {{ element.materialCount }}
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="Total Supplier">
-                    <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
-                    <td mat-cell *matCellDef="let element" class="text-align-center">
-                      <div class="supplier-qty-div">
-                        <div>
-                          {{ element.supplierList != null ? element.supplierList.length : "" }}
-                        </div>
+                    <ng-container matColumnDef="Total Material">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Material</th>
+                      <td mat-cell *matCellDef="let element" class="text-align-center">
+                        {{ element.materialCount }}
+                      </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Total Supplier">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
+                      <td mat-cell *matCellDef="let element" class="text-align-center">
+                        <div class="supplier-qty-div">
+                          <div>
+                            {{ element.supplierList != null ? element.supplierList.length : "" }}
+                          </div>
 
-                        <div class="show-detail-supplier rfq-icon-material-i" *ngIf="element.supplierList.length > 0">
-                          <!-- <img src="../../../../assets/images/i_icon.png" /> -->
-                          <i class="material-icons md-24 mt-2" style="padding-top: 0px;">info</i>
-                          <div id="detail-supplier">
-                            <div class="row">
-                              <div class="col-sm-12">
-                                <span class="supplier-name-tag">Supplier Name</span>
-                                <ng-container *ngFor="let name of element.supplierList">
-                                  <span><br />
-                                    {{ name.supplierName }}
-                                  </span>
-                                </ng-container>
+                          <div class="show-detail-supplier rfq-icon-material-i" *ngIf="element.supplierList.length > 0">
+                            <!-- <img src="../../../../assets/images/i_icon.png" /> -->
+                            <i class="material-icons md-24 mt-2" style="padding-top: 0px;">info</i>
+                            <div id="detail-supplier">
+                              <div class="row">
+                                <div class="col-sm-12">
+                                  <span class="supplier-name-tag">Supplier Name</span>
+                                  <ng-container *ngFor="let name of element.supplierList">
+                                    <span><br />
+                                      {{ name.supplierName }}
+                                    </span>
+                                  </ng-container>
+                                </div>
                               </div>
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="action1">
-                    <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
-                    <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
-                      <a [routerLink]="['./rfq-view', element.rfqId]" style="color: #f47721;">View RFQ</a>
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="action2">
-                    <th mat-header-cell *matHeaderCellDef></th>
-                    <td mat-cell *matCellDef="let element; let i = index" class="action2" class="text-align-center">
-                      <a [routerLink]="['./rfq-bid/', element.rfqId]" class="text-align-center"
-                        style="color: #f47721;">View
-                        Bids</a>
-                    </td>
-                  </ng-container>
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                </table>
-              </div>
-            </mat-expansion-panel>
-          </mat-accordion>
-          <br />
-          <mat-accordion *ngIf="nonSubmittedRfqListTemp">
-            <mat-expansion-panel class="myPanel" [expanded]="true">
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Quotes Not Received
-                </mat-panel-title>
-              </mat-expansion-panel-header>
+                      </td>
+                    </ng-container>
+                    <ng-container matColumnDef="action1">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
+                      <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
+                        <a [routerLink]="['./rfq-view', element.rfqId]" style="color: #f47721;">View RFQ</a>
+                      </td>
+                    </ng-container>
+                    <ng-container matColumnDef="action2">
+                      <th mat-header-cell *matHeaderCellDef></th>
+                      <td mat-cell *matCellDef="let element; let i = index" class="action2" class="text-align-center">
+                        <a [routerLink]="['./rfq-bid/', element.rfqId]" class="text-align-center"
+                          style="color: #f47721;">View
+                          Bids</a>
+                      </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                  </table>
+                </div>
+              </mat-expansion-panel>
+            </mat-accordion>
+            <br />
+            <mat-accordion *ngIf="nonSubmittedRfqListTemp">
+              <mat-expansion-panel class="myPanel" [expanded]="true">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Quotes Not Received
+                  </mat-panel-title>
+                </mat-expansion-panel-header>
 
-              <div class="add-unique-container mat-elevation-z8">
-                <table mat-table [dataSource]="nonSubmittedRfqList">
-                  <ng-container matColumnDef="RFQ Name">
-                    <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
-                    <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
-                  </ng-container>
+                <div class="add-unique-container mat-elevation-z8">
+                  <table mat-table [dataSource]="nonSubmittedRfqList">
+                    <ng-container matColumnDef="RFQ Name">
+                      <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
+                      <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="Raised Date">
-                    <th mat-header-cell *matHeaderCellDef>Raised Date</th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.createdAt | date: "dd MMM yyy" }}
-                    </td>
-                  </ng-container>
+                    <ng-container matColumnDef="Raised Date">
+                      <th mat-header-cell *matHeaderCellDef>Raised Date</th>
+                      <td mat-cell *matCellDef="let element">
+                        {{ element.createdAt | date: "dd MMM yyy" }}
+                      </td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="End Date">
-                    <th mat-header-cell *matHeaderCellDef>End Date</th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.rfqDueDate | date: "dd MMM yyy" }}
-                    </td>
-                  </ng-container>
+                    <ng-container matColumnDef="End Date">
+                      <th mat-header-cell *matHeaderCellDef>End Date</th>
+                      <td mat-cell *matCellDef="let element">
+                        {{ element.rfqDueDate | date: "dd MMM yyy" }}
+                      </td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="Projects">
-                    <th mat-header-cell *matHeaderCellDef class="text-align-center">Projects</th>
-                    <td mat-cell *matCellDef="let element" class="text-align-center">
-                      {{ element.projectCount }}
-                    </td>
-                  </ng-container>
+                    <ng-container matColumnDef="Projects">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-center">Projects</th>
+                      <td mat-cell *matCellDef="let element" class="text-align-center">
+                        {{ element.projectCount }}
+                      </td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="Total Material">
-                    <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Material</th>
-                    <td mat-cell *matCellDef="let element" class="text-align-center">
-                      {{ element.materialCount }}
-                    </td>
-                  </ng-container>
+                    <ng-container matColumnDef="Total Material">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Material</th>
+                      <td mat-cell *matCellDef="let element" class="text-align-center">
+                        {{ element.materialCount }}
+                      </td>
+                    </ng-container>
 
-                  <ng-container matColumnDef="Total Supplier">
-                    <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
-                    <td mat-cell *matCellDef="let element" class="text-align-center">
-                      <div class="supplier-qty-div">
-                        <div>
-                          {{ element.supplierList != null ? element.supplierList.length : "" }}
-                        </div>
+                    <ng-container matColumnDef="Total Supplier">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
+                      <td mat-cell *matCellDef="let element" class="text-align-center">
+                        <div class="supplier-qty-div">
+                          <div>
+                            {{ element.supplierList != null ? element.supplierList.length : "" }}
+                          </div>
 
-                        <div class="show-detail-supplier rfq-icon-material-i" *ngIf="element.supplierList">
-                          <!-- <img src="../../../../assets/images/i_icon.png" /> -->
-                          <mat-icon class="material-icons md-24 mt-2">info</mat-icon>
-                          <div id="detail-supplier">
-                            <div class="row">
-                              <div class="col-sm-12">
-                                <span class="supplier-name-tag">Supplier Name</span>
-                                <ng-container *ngFor="let name of element.supplierList">
-                                  <span><br />
-                                    {{ name.supplierName }}
-                                  </span>
-                                </ng-container>
+                          <div class="show-detail-supplier rfq-icon-material-i" *ngIf="element.supplierList">
+                            <!-- <img src="../../../../assets/images/i_icon.png" /> -->
+                            <mat-icon class="material-icons md-24 mt-2">info</mat-icon>
+                            <div id="detail-supplier">
+                              <div class="row">
+                                <div class="col-sm-12">
+                                  <span class="supplier-name-tag">Supplier Name</span>
+                                  <ng-container *ngFor="let name of element.supplierList">
+                                    <span><br />
+                                      {{ name.supplierName }}
+                                    </span>
+                                  </ng-container>
+                                </div>
                               </div>
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="action1">
-                    <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
-                    <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
-                      <a (click)="viewRfq(element)" class="cursor"
-                        style="color: #f47721;">{{ element.rfqStatus === 0 ? "Complete RFQ" : "View RFQ" }}</a>
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="action2">
-                    <th mat-header-cell *matHeaderCellDef></th>
-                    <td mat-cell *matCellDef="let element; let i = index" class="action2" class="text-align-center">
-                    </td>
-                  </ng-container>
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                </table>
-              </div>
-            </mat-expansion-panel>
-          </mat-accordion>
-        </div>
+                      </td>
+                    </ng-container>
+                    <ng-container matColumnDef="action1">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
+                      <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
+                        <a (click)="viewRfq(element)" class="cursor"
+                          style="color: #f47721;">{{ element.rfqStatus === 0 ? "Complete RFQ" : "View RFQ" }}</a>
+                      </td>
+                    </ng-container>
+                    <ng-container matColumnDef="action2">
+                      <th mat-header-cell *matHeaderCellDef></th>
+                      <td mat-cell *matCellDef="let element; let i = index" class="action2" class="text-align-center">
+                      </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                  </table>
+                </div>
+              </mat-expansion-panel>
+            </mat-accordion>
+          </div>
+        </ng-container>
+        <ng-template #emptyReports>
+          <div class="d-block text-align-center mt-3">
+            <img src="../../../../assets/images/empty-report.svg" alt="empty report">
+            <p class="font-weight-light m-0 pt-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.
+            </p>
+            <p class="font-weight-light m-0 mt-1">Try Again !</p>
+          </div>
+        </ng-template>
       </div>
 
     </div>
